deploy/idp/mock/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-idp
  namespace: idp
  labels:
    app.kubernetes.io/name: mock-idp
    app.kubernetes.io/part-of: k8sgateway
spec:
  selector:
    app.kubernetes.io/name: mock-idp
  ports:
    - name: http
      port: 8080
      targetPort: http
